--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -33,6 +33,11 @@ body {
 
 #product-selected-color {
   font-weight: 500; }
+  @media (min-width: 768px) {
+    #product-selected-color {
+      font-weight: 200; } }
+  #product-selected-color span {
+    font-weight: 500; }
 
 #product-colors {
   display: flex;
@@ -62,7 +67,13 @@ body {
     margin-bottom: 0; }
   #product-size-wrapper select.custom-select,
   #product-qty-wrapper select.custom-select {
-    width: 50%; }
+    border-radius: 0; }
+
+#product-size-wrapper select.custom-select {
+  width: 50%; }
+  @media (min-width: 768px) {
+    #product-size-wrapper select.custom-select {
+      width: 100%; } }
 
 #submit-button {
   border-radius: 0;
@@ -86,3 +97,17 @@ body {
       vertical-align: middle;
       margin-left: -15px;
       margin-right: 15px; }
+
+@media (min-width: 768px) {
+  #size-submit-wrapper {
+    margin: 30px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between; }
+    #size-submit-wrapper #product-qty-wrapper {
+      flex-basis: 35%;
+      margin: 0; }
+    #size-submit-wrapper #submit-button {
+      flex-basis: 60%;
+      margin: 0; } }
