--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -50,6 +50,13 @@ body {
 
 #product-selected-color {
     font-weight: $semibold;
+
+    @media (min-width: 768px) {
+        font-weight: 200;
+    }
+    span {
+        font-weight: $semibold;
+    }
 }
 
 #product-colors {
@@ -86,7 +93,17 @@ body {
     }
 
     select.custom-select {
+        border-radius: 0;
+    }
+}
+
+#product-size-wrapper {
+    select.custom-select {
         width: 50%;
+        
+        @media (min-width: 768px) {
+            width: 100%;
+        }
     }
 }
 
@@ -119,6 +136,26 @@ body {
                 margin-left: (-1 * $bullet-list-margin);
                 margin-right: $bullet-list-margin;
             }
+        }
+    }
+}
+
+#size-submit-wrapper {
+    @media (min-width: 768px) {
+        margin: 30px 0;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        justify-content: space-between;
+
+        #product-qty-wrapper {
+            flex-basis: 35%;
+            margin: 0;
+        }
+
+        #submit-button {
+            flex-basis: 60%;
+            margin: 0;
         }
     }
 }
