--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 body {
   font-size: 18px; }
+  @media (min-width: 992px) {
+    body {
+      padding: 30px 0; } }
 
 #product-colors {
   align-content: space-between; }
